k8s-manifests/applications/argocd/acme-challenge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-acme-challenge
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.gonella.co.uk
      http:
        paths:
          - path: /.well-known/acme-challenge
            pathType: ImplementationSpecific
            backend:
              service:
                name: acme-challenge-dummy
                port:
                  number: 80
